fix border not showing spaces on smaller screens <400px

--- a/style.css
+++ b/style.css
@@ -137,6 +137,11 @@ a.nav-link img:hover {
   margin-bottom: 30px;
 }
 
+.row {
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
 .
 
 /* portfolio */
